# CompilerCpp

./: .gitignore  CMakeLists.txt  README.md  mainwindow.ui
src/C++00/: input.txt  main.cpp
src/C++00/assembly/: AssemblyGenerator.cppm
src/C++00/auxiliary/: Reports.cppm
src/C++00/grammar/: Cpp.g4
src/C++00/optimizations/: ASTOptimizer.cppm
src/C++00/semantics/: SemanticAnalysis.cppm  SemanticVisitor.cppm
src/C++00/symbolTable/: SymbolTable.cppm  SymbolTableVisitor.cppm
src/Qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui
